Add golenspurchase URL to projects.json

--- a/app/projects.json
+++ b/app/projects.json
@@ -1,5 +1,8 @@
 {
     "fleetgo":{
         "url":"https://fleetgo.axilivo.com"
+    },
+    "golenspurchase":{
+        "url":"https://purchase.golens.in"
     }
 }
