Update Golens Purchase URL to include API endpoint

--- a/app/projects.json
+++ b/app/projects.json
@@ -3,6 +3,6 @@
         "url":"https://fleetgo.axilivo.com"
     },
     "golenspurchase":{
-        "url":"https://purchase.golens.in"
+        "url":"https://purchase.golens.in/api"
     }
 }
