Update golenspurchase URL in projects.json

--- a/app/projects.json
+++ b/app/projects.json
@@ -3,6 +3,7 @@
         "url":"https://fleetgo.axilivo.com"
     },
     "golenspurchase":{
-        "url":"https://purchase.golens.in/api"
-    }
+        "url":"https://molybdous-alden-lambently.ngrok-free.dev/api"
+    },
+    
 }
