--- a/app/projects.json
+++ b/app/projects.json
@@ -3,7 +3,7 @@
         "url":"https://fleetgo.axilivo.com"
     },
     "golenspurchase":{
-        "url":"https://molybdous-alden-lambently.ngrok-free.dev/api"
+        "url":"https://purchase.golens.in/api"
     },
     
 }
